Lots of functionality added

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
     <title>Index</title>
   </head>
   <body>
-    Hello World
+    <h1>TFW2005 TFEW Player Tracker</h1>
+    <a href="/upload">Process scores</a>
   </body>
 </html>
