--- a/templates/upload.html
+++ b/templates/upload.html
@@ -13,6 +13,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
   <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='style.css')}}">
+  <script type="text/javascript" src="{{url_for('static', filename='common.js')}}"></script>
   <script type="text/javascript" src="{{url_for('static', filename='uploader.js')}}"></script>
 
   <title>Upload scores</title>
