--- a/templates/index.html
+++ b/templates/index.html
@@ -1,18 +1,37 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Index</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous">
+    </script>
+
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+    <script type="text/javascript" src="{{url_for('static', filename='jquery.serialize-object.min.js')}}"></script>
+
+    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='style.css')}}">
+    <script type="text/javascript" src="{{url_for('static', filename='common.js')}}"></script>
+
+    <title>TFW2005 Player Tracker</title>
   </head>
   <body>
-    <h1>TFW2005 TFEW Player Tracker</h1>
-    <a href="/upload">Process scores</a>
-    <a href="/player_editor">Edit Players</a>
-    <table>
-      {% for player in players %}
-      <tr>
-        <td>{{player.name}}</td>
-      </tr>
-      {% endfor %}
-    </table>
+    <div class="container">
+      <h1>TFW2005 TFEW Player Tracker</h1>
+      <a href="/upload">Process scores</a>
+      <br />
+      <a href="/player_editor">Edit Players</a>
+      <br />
+      <table>
+        {% for player in players %}
+        <tr>
+          <td>{{player.name}}</td>
+        </tr>
+        {% endfor %}
+      </table>
+    </div>
   </body>
 </html>
