--- a/templates/player_editor.html
+++ b/templates/player_editor.html
@@ -117,6 +117,7 @@
         <input class="btn btn-primary" type="button" id="submit" value="Submit changes">
       </form>
       <div id="alert_wrapper"></div>
+      <div class="row">&nbsp;</div>
     </div>
   </body>
 </html>
