Added multi-alliance functionality.  Fix for missing players in edited war.

--- a/templates/import_scores.html
+++ b/templates/import_scores.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>TFW2005 Score Importer</h1>
+      <h1>TFEW Score Importer</h1>
       <a href="/upload">Process scores</a>
       <br />
       <a href="/player_editor">Edit Players</a>
