--- a/templates/player_editor.html
+++ b/templates/player_editor.html
@@ -22,7 +22,7 @@
   <body>
     <div class="container">
       <a href="/">Home</a><br />
-      <h1>TFW2005 TFEW Player Editor</h1>
+      <h1>TFEW Player Editor</h1>
       <form method="POST">
         <table class="table table-sm table-striped">
           <thead>
