--- a/templates/war_editor.html
+++ b/templates/war_editor.html
@@ -22,10 +22,23 @@
   <body>
     <div class="container">
       <a href="/">Home</a><br />
-      <h1>TFW2005 TFEW War Editor</h1>
+      <h1>TFEW War Editor</h1>
       <form method="POST">
         <input type="hidden" name="war_id" value="{{war.id}}">
         <table class="table table-sm w-auto">
+          <tr>
+            <th>Alliance</th>
+            <td>
+              <select class="custom-select" name="alliance_id">
+                <option></option>
+                {% for alliance in alliances %}
+                <option value="{{alliance.id}}"
+                {% if alliance_id == alliance.id %} selected {% endif %}>{{alliance.name}}
+                </option>
+                {% endfor %}
+              </select>
+            </td>
+          </tr>
           <tr>
             <th>Opponent</th>
             <td>
@@ -178,6 +191,50 @@
             </td>
             <td class="col-3">
               <input class="form-control" type="checkbox" tabindex="-1" name="players[{{player.id}}][no_attempts]" value="{{player.id}}"
+              {% if player.score(war.id).no_attempts %}
+                checked
+              {% endif %}
+              >
+            </td>
+          </tr>
+          {% endfor %}
+
+          {% if missing_players %}
+          <tr>
+            <td>
+              <!-- <a class="btn btn&#45;primary" data&#45;toggle="collapse" href=".missingPlayers" role="button" aria&#45;expanded="false" aria&#45;controls="missingPlayers"> -->
+              <!--   Add Missing Players -->
+              <!-- </a> -->
+              <button class="btn btn-primary" type="button" data-toggle="collapse" data-target=".missingPlayers" aria-expanded="false" aria-controls="missingPlayers">Add Missing Players</button>
+            </td>
+          </tr>
+          {% endif %}
+
+          {% for player in missing_players %}
+          <tr class="d-flex collapse missingPlayers">
+            <td class="col-5">
+              <input type="hidden" name="missing_players[{{player.id}}][id]" value="{{player.id}}">
+              {{player.name}}
+            </td>
+            <td class="col-3">
+              <input class="form-control" type="number" name="missing_players[{{player.id}}][score]" value="{{player.score(war.id).score}}">
+            </td>
+            <td class="col-3">
+              <input class="form-control" type="checkbox" tabindex="-1" name="missing_players[{{player.id}}][excused]" value="{{player.id}}"
+              {% if player.score(war.id).excused %}
+                checked
+              {% endif %}
+              >
+            </td>
+            <td class="col-3">
+              <input class="form-control" type="checkbox" tabindex="-1" name="missing_players[{{player.id}}][attempts_left]" value="{{player.id}}"
+              {% if player.score(war.id).attempts_left %}
+                checked
+              {% endif %}
+              >
+            </td>
+            <td class="col-3">
+              <input class="form-control" type="checkbox" tabindex="-1" name="missing_players[{{player.id}}][no_attempts]" value="{{player.id}}"
               {% if player.score(war.id).no_attempts %}
                 checked
               {% endif %}
