--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=0.7, shrink-to-fit=no">
 
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
@@ -21,8 +21,10 @@
   </head>
   <body>
     <div class="container">
-      <h1>TFEW Player Tracker</h1>
+      <h1><a href="/">TFEW Player Tracker</a></h1>
       <a href="/war_editor">New War</a>
+      <br />
+      <a href="/history">War History</a>
       <br />
       <a href="/upload">Process scores</a>
       <br />
@@ -38,6 +40,8 @@
           <div class="col-auto">
             <select class="custom-select" name="alliance_id">
               <option></option>
+              <option value="9999" {% if templates['alliance'] == 9999 %} selected {%endif %}>All
+              </option>
               {% for alliance in alliances %}
               <option value="{{alliance.id}}"
               {% if templates['alliance'] == alliance.id %} selected {% endif %}>{{alliance.name}}
@@ -45,6 +49,16 @@
               {% endfor %}
             </select>
           </div>
+
+          <div class="col-auto">
+            Opponent:
+          </div>
+          <div class="col-auto">
+            <div id="opponentsAuto" class="autocomplete" data-autocomplete='{{ opponents|tojson }}'>
+              <input class="form-control" type="text" name="opponent" value="{{templates['opponent']}}" autocomplete="off">
+            </div>
+          </div>
+
           <div class="col-auto">
             Date Range:
           </div>
@@ -70,7 +84,7 @@
           <th class="header-right" colspan="5">Opponent</th>
           {% for war in wars %}
           <td class="sticky-top-2 {{war.winClass}} {{war.trackedClass}}">
-            <a href="/?war_opponent={{war.opponent_id}}">{{war.opponent.name}}</a>
+            <a href="/?alliance_id={{templates['alliance']}}&opponent_id={{war.opponent_id}}">{{war.opponent.name}}</a>
           </td>
           {% endfor %}
         </tr>
