--- a/templates/index.html
+++ b/templates/index.html
@@ -75,7 +75,7 @@
         <tr>
           <th class="header-right" colspan="5">Date</th>
           {% for war in wars %}
-          <td class="sticky-top {{war.winClass}} {{war.trackedClass}}">
+          <td class="sticky-top min-width {{war.winClass}} {{war.trackedClass}}">
             <a href="/war_editor?war_id={{war.id}}">{{war.date}}</a>
           </td>
           {% endfor %}
@@ -171,7 +171,7 @@
 
         {% for player in players %}
         <tr>
-          <td class="header-left sticky-left">{{player.name}}</td>
+          <td class="header-left sticky-left"><a href="/player?player_id={{player.id}}">{{player.name}}</a></td>
           <td>{{player.trackedAvg}}</td>
           <td>{{player.untrackedAvg}}</td>
           <td>{{player.primeAvg}}</td>
